- Vertically centered content on Main component - Added linebreaks at 'breakpoints' in Main to prevent jarring repositioning on smaller width screens

--- a/src/styles/components/_base.css
+++ b/src/styles/components/_base.css
@@ -1,6 +1,7 @@
 .content {
   display: flex;
   flex-flow: row wrap;
+  height: 75vh;
   justify-content: center;
 }
 
